objects/AccountDataToRefresh__e.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <label>Account Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>